[package]
name = "oaph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
schemars = { version = "0.8", features = ["preserve_order"] }
serde_yaml = "0.8"
anyhow = "1.0"


[dev-dependencies]
env_logger = "0.8"
