[package]
name = "oaph"
version = "0.1.0"
authors = ["oaph contributors"]
description = "Helps to subtituated query params and schema definitions to openapi3 yaml"
readme = "README.md"
keywords = ["openapi3"]
repository = "https://github.com/estin/oaph.git"
documentation = "https://docs.rs/oaph/"
categories = ["template-engine", "development-tools"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
schemars = { version = "0.8", features = ["preserve_order"] }
serde_yaml = "0.8"
anyhow = "1.0"


[dev-dependencies]
env_logger = "0.8"
