[package]
name = "oaph"
version = "0.1.1"
authors = ["oaph contributors"]
description = "Helps to subtituated query params and schema definitions to openapi3 yaml"
readme = "README.md"
keywords = ["openapi3"]
repository = "https://github.com/estin/oaph.git"
documentation = "https://docs.rs/oaph/"
categories = ["template-engine", "development-tools"]
license = "MIT"
edition = "2021"
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "0.8", features = ["preserve_order"] }
serde_yaml = "0.9"
anyhow = "1.0"
